address comments